﻿新增註解
新增狀態
新增物件邊框
修復連續畫物件
修復畫直線
新增右下角簡易拖曳