@@ -4,3 +4,7 @@
 修復連續畫物件
 修復畫直線
 新增右下角簡易拖曳
+將 ArrayList 改成 HashMap
+改寫Undo
+新增按 Delete 刪除物件
+新增其他圖形右下角縮放
